# nqueen_rust

./: Cargo.toml  README.md  queen.py  release_build.bat  release_build.ps1  release_build.sh
src/: lib.rs  main.rs
