[package]
name = "nqueen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
